REGRESSION(r220278): Web Inspector: ContextMenu items are not getting triggered https://bugs.webkit.org/show_bug.cgi?id=176034

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-08-28
Reviewed by Devin Rousso.

* inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::showContextMenu):
Responses go through InspectorFrontendAPI not InspectorFrontendHost.

Canonical link: https://commits.webkit.org/192712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221283 268f45cc-cd09-0410-ab3c-d52691b4dbfc